--- a/react/package.json
+++ b/react/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
+    "@react-oauth/google": "^0.12.1",
     "apexcharts": "^3.45.1",
     "axios": "^1.6.3",
+    "date-fns": "^3.0.6",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
